--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" >
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="apple-touch-icon" href="/icons/mixi-bot-192.png" />
+    <link rel="apple-touch-icon" href="/mixi-bot-192.png" />
   <style>
       @import url("https://fonts.googleapis.com/css?family=Plus+Jakarta+Sans:800,400,500,700");
     </style></head>
