--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,26 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" >
     <link rel="manifest" href="/manifest.webmanifest" />
-    <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="apple-touch-icon" href="/mixi-bot-192.png" />
+
+    <!-- iOS Home Screen icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon-180x180.png">
+
+    <!-- Standard favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+
+    <!-- Legacy fallback -->
+    <link rel="shortcut icon" href="/favicon.ico">
+
+    <!-- iOS standalone mode -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Mixi">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+    <!-- Theme color (browser UI + PWA splash) -->
+    <meta name="theme-color" content="#181711">
+
   <style>
       @import url("https://fonts.googleapis.com/css?family=Plus+Jakarta+Sans:800,400,500,700");
     </style>
